chore: adding permissions to gradlew

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ test-core:
   stage: test
   dependencies: [ ]
   script: |
+    chmod +x ./gradlew
     ./gradlew :test-automation-core:test
 
 publish-core:
