--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,15 @@ publish-ams-int:
   rules:
     - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG'
 
+publish-postman:
+  stage: publish
+  dependencies: [ ]
+  script: |
+    chmod +x ./gradlew
+    ./gradlew :test-automation-postman:publish
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG'
+
 release-core:
   stage: release
   dependencies: [ ]
