--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,21 +36,18 @@ build-modules:
   stage: build
   dependencies: [ ]
   script: |
-    chmod +x ./gradlew
     ./gradlew clean build
 
 execute-tests:
   stage: test
   dependencies: [ ]
   script: |
-    chmod +x ./gradlew
     ./gradlew test
 
 publish-modules:
   stage: publish
   dependencies: [ ]
   script: |
-    chmod +x ./gradlew
     ./gradlew publish
   rules:
     - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG'
@@ -64,10 +61,8 @@ release-version:
   script: |
     git config user.name "Gitlab"
     git config user.email gitlab@gtcybertech.com
-    chmod +x ./gradlew
     ./gradlew release
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-      when: manual
-      allow_failure: true
+      when: always
     - when: never
