--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,25 +32,34 @@ stages:
   - publish
   - release
 
-#build-modules:
-#  stage: build
-#  dependencies: [ ]
-#  script: |
-#    ./gradlew clean build
-#
-#execute-tests:
-#  stage: test
-#  dependencies: [ ]
-#  script: |
-#    ./gradlew test
-#
-#publish-modules:
-#  stage: publish
-#  dependencies: [ ]
-#  script: |
-#    ./gradlew publish
-#  rules:
-#    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG'
+build-modules:
+  stage: build
+  dependencies: [ ]
+  cache:
+    <<: *global_cache
+    policy: pull-push
+  script: |
+    ./gradlew clean build
+  artifacts:
+    paths:
+      - app-main/build/libs/*.jar
+    expire_in: 1 day
+    reports:
+      dotenv: deploy.env
+
+execute-tests:
+  stage: test
+  dependencies: [ ]
+  script: |
+    ./gradlew test
+
+publish-modules:
+  stage: publish
+  dependencies: [ ]
+  script: |
+    ./gradlew publish
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG'
 
 release-version:
   stage: release
