--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ release-version:
     git config user.name "GitLab"
     git config user.email gitlab@gtcybertech.com
     ./gradlew release -Prelease.ignoreUncommittedChanges=true --stacktrace
-    git push "https://$GRGIT_USER:$GRGIT_PASS@${CI_REPOSITORY_URL#*@}" --tags
+    git push --repo=git@${CI_REPOSITORY_URL#*@} --tags
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
       when: always
