--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,11 +32,6 @@ stages:
   - publish
   - release
 
-variables-export:
-  stage: build
-  script:
-    - export
-
 build-modules:
   stage: build
   dependencies: [ ]
@@ -70,7 +65,8 @@ release-version:
     git config user.name "GitLab"
     git config user.email gitlab@gtcybertech.com
     ./gradlew release -Prelease.ignoreUncommittedChanges=true --stacktrace
-    git push --repo=git@${CI_REPOSITORY_URL#*@} --tags
+    URL=${CI_REPOSITORY_URL#*@}
+    git push --repo=git@${URL/\//:} --tags
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
       when: always
