--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,20 +5,20 @@ variables:
   # is usually a priority over speed in CI environments. Using a fresh
   # runtime for each build is more reliable since the runtime is completely
   # isolated from any previous builds.
-  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+#  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
   # Tags are not fetched if GitLab shallow cloning is enabled (default).
   # However, release plugin requires actual tags to be available.
   GIT_FETCH_EXTRA_FLAGS: --tags
 
-cache:
-  key: gradle-cache-key
-  paths:
-    - .gradle/wrapper
-    - .gradle/caches
-  policy: pull
-
-before_script:
-  - export GRADLE_USER_HOME=`pwd`/.gradle
+#cache:
+#  key: gradle-cache-key
+#  paths:
+#    - .gradle/wrapper
+#    - .gradle/caches
+#  policy: pull
+#
+#before_script:
+#  - export GRADLE_USER_HOME=`pwd`/.gradle
 
 workflow:
   rules:
@@ -34,16 +34,16 @@ stages:
 build-modules:
   stage: build
   dependencies: [ ]
-  only:
-    changes:
-      - "*.gradle"
-      - gradle.properties
-  cache:
-    key: gradle-cache-key
-    paths:
-      - .gradle/wrapper
-      - .gradle/caches
-    policy: push
+#  only:
+#    changes:
+#      - "*.gradle"
+#      - gradle.properties
+#  cache:
+#    key: gradle-cache-key
+#    paths:
+#      - .gradle/wrapper
+#      - .gradle/caches
+#    policy: push
   script: |
     ./gradlew clean build
 
