--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ target/
 !src/**/build/
 gradle-local.properties
 
-# Ignore Gradle GUI config
+# Ignore Gradle GUI configuration
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
