Adding support for selenide-proxy

--- a/demos/demo-ui-test/src/test/resources/application-override.yml
+++ b/demos/demo-ui-test/src/test/resources/application-override.yml
@@ -24,6 +24,8 @@ test-automation:
     headless: false
     timeout: 40000
     page-load-timeout: 30000
+    proxy-enabled: true
+    file-download: proxy
   custom:
     demo-mode: true
     lazy-execution: false
