--- a/demos/demo-ui-test/src/test/resources/application-override.yml
+++ b/demos/demo-ui-test/src/test/resources/application-override.yml
@@ -21,7 +21,7 @@ test-automation:
     browser: CHROME # Options: CHROME, EDGE, FIREFOX, OPERA, SAFARI (works only with Mac)
     browser-size: "1920x1080"
     driver-manager-enabled: true
-    headless: false
+    headless: true
     timeout: 40000
     page-load-timeout: 30000
     proxy-enabled: true
