feat: improve test execution logging
This change reduces memory usage as logs are not stored in memory

--- a/test-automation-allure/src/main/resources/application-base.yml
+++ b/test-automation-allure/src/main/resources/application-base.yml
@@ -1,5 +1,6 @@
 test-automation:
   report:
     allure:
+      base-dir: build
       report-dir: build/allure-report
       result-dir: build/allure-results
