--- a/test-automation-allure/src/main/resources/application-base.yml
+++ b/test-automation-allure/src/main/resources/application-base.yml
@@ -4,3 +4,6 @@ test-automation:
       base-dir: build
       report-dir: build/allure-report
       result-dir: build/allure-results
+      zip-report:
+        enabled: true
+        zip-dir: build/zipped-report
