LTBENCH-157: Small fix

--- a/test-automation-allure/src/test/resources/application-override.yml
+++ b/test-automation-allure/src/test/resources/application-override.yml
@@ -2,3 +2,8 @@ test-automation:
   report-name: core-testing
   cucumber:
     glue-append: com.nortal.test.report.allure.glue
+  report:
+    allure:
+      zip-report:
+        enabled: true
+        zip-dir: build/zipped-report
